--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -10,3 +10,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.backgroundImage {
+  background-image: url(./assets/chemistryBackground.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
