--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -11,9 +11,19 @@
   flex-direction: column;
 }
 
-.backgroundImage {
-  background-image: url(./assets/chemistryBackground.jpg);
+.backgroundImage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./assets/mainPageBackground.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+  filter: blur(3px);
 }
+
