--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -11,7 +11,7 @@
   flex-direction: column;
 }
 
-.backgroundImage::before {
+/* .backgroundImage::before {
   content: "";
   position: absolute;
   top: 0;
@@ -25,5 +25,5 @@
   opacity: 0.5;
   z-index: -1;
   filter: blur(3px);
-}
+} */
 
