--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -104,3 +104,19 @@
   opacity: 0.3;
   z-index: -1;
 }
+
+.backgroundImage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./assets/mainPageBackground.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+  filter: blur(3px);
+}
